--- a/index.html
+++ b/index.html
@@ -11,7 +11,27 @@
   </head>
   <body>
     </div class="container">
-      <h1>Programming Track Helper</h1>
+      <header><h1>Programming Track Helper</h1></header>
+      <div class="row">
+        <div class="col-sm-6">
+          <ul class="list-group">
+            <a href="http://www.epicodus.com/ruby" class="list-group-item list-group-item-action">Ruby</a>
+            <a href="http://www.epicodus.com/php" class="list-group-item list-group-item-action">PHP</a>
+            <a href="http://www.epicodus.com/java" class="list-group-item list-group-item-action">Java</a>
+            <a href="http://www.epicodus.com/css" class="list-group-item list-group-item-action">CSS</a>
+            <a href="http://www.epicodus.com/c-sharp" class="list-group-item list-group-item-action">C#</a>
+          </ul>
+        </div>
+        <div class="col-sm-6">
+          <ul class="list-group">
+            <a href="http://www.epicodus.com/css" class="list-group-item list-group-item-action">Rails</a>
+            <a href="http://www.epicodus.com/drupal" class="list-group-item list-group-item-action">Drupal</a>
+            <a href="http://www.epicodus.com/android" class="list-group-item list-group-item-action">Android</a>
+            <a href="http://www.epicodus.com/design" class="list-group-item list-group-item-action">Design</a>
+            <a href="http://www.epicodus.com/net" class="list-group-item list-group-item-action">.NET</a>
+          </ul>
+        </div>
+      </div> <!--end of row-->
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       <form id="quiz">
         <div class="row">
@@ -25,8 +45,8 @@
                 <option value="placeholder">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
                 <option value="placeholder">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
               </select>
-            <label for="question1">This is a placeholder for where the question will be going?</label>
-              <select class="form-control" id="question1">
+            <label for="question2">This is a placeholder for where the question will be going?</label>
+              <select class="form-control" id="question2">
                 <option selected disabled>Choose one of the following:</label>
                 <option value="placeholder">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
                 <option value="placeholder">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
@@ -34,8 +54,8 @@
                 <option value="placeholder">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
                 <option value="placeholder">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
               </select>
-            <label for="question1">This is a placeholder for where the question will be going?</label>
-              <select class="form-control" id="question1">
+            <label for="question3">This is a placeholder for where the question will be going?</label>
+              <select class="form-control" id="question3">
                 <option selected disabled>Choose one of the following:</label>
                 <option value="placeholder">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
                 <option value="placeholder">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
@@ -45,8 +65,8 @@
               </select>
           </div>
           <div class="col-sm-6">
-            <label for="question1">This is a placeholder for where the question will be going?</label>
-              <select class="form-control" id="question1">
+            <label for="question4">This is a placeholder for where the question will be going?</label>
+              <select class="form-control" id="question4">
                 <option selected disabled>Choose one of the following:</label>
                 <option value="placeholder">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
                 <option value="placeholder">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
@@ -54,8 +74,8 @@
                 <option value="placeholder">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
                 <option value="placeholder">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
               </select>
-            <label for="question1">This is a placeholder for where the question will be going?</label>
-              <select class="form-control" id="question1">
+            <label for="question5">This is a placeholder for where the question will be going?</label>
+              <select class="form-control" id="question5">
                 <option selected disabled>Choose one of the following:</label>
                 <option value="placeholder">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
                 <option value="placeholder">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
@@ -63,8 +83,8 @@
                 <option value="placeholder">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
                 <option value="placeholder">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
               </select>
-            <label for="question1">This is a placeholder for where the question will be going?</label>
-              <select class="form-control" id="question1">
+            <label for="question6">This is a placeholder for where the question will be going?</label>
+              <select class="form-control" id="question6">
                 <option selected disabled>Choose one of the following:</label>
                 <option value="placeholder">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
                 <option value="placeholder">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
@@ -74,7 +94,18 @@
               </select>
           </div>
         </div> <!--end row -->
+        <button type="submit" class="btn btn-success btn-lg">Submit your answers!</button>
       </form>
+      <div id="ruby-rails">
+      </div>
+      <div id="php-drupal">
+      </div>
+      <div id="java-android">
+      </div>
+      <div id="css/design">
+      </div>
+      <div id="c#-.net">
+      </div>
     </div> <!--end of body container-->
   </body>
 </html>
