--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body>
     </div class="container">
       <header><h1>Programming Track Helper</h1></header>
+      <h3>An interactive guide for your programming education</h3>
       <div class="row">
         <div class="col-sm-6">
           <ul class="list-group">
@@ -97,14 +98,19 @@
         <button type="submit" class="btn btn-success btn-lg">Submit your answers!</button>
       </form>
       <div id="ruby-rails">
+        <h3>Sounds like taking Ruby and Rails would be a good choice for you! Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<h3>
       </div>
       <div id="php-drupal">
+        <h3>Sounds like taking PHP and Drupal would be a good choice for you! Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<h3>
       </div>
       <div id="java-android">
+        <h3>Sounds like taking Java and Android would be a good choice for you! Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<h3>
       </div>
-      <div id="css/design">
+      <div id="css-design">
+        <h3>Sounds like taking Ruby and Rails would be a good choice for you! Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<h3>
       </div>
-      <div id="c#-.net">
+      <div id="c-net">
+        <h3>Sounds like taking #C and .NET would be a good choice for you! Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<h3>
       </div>
     </div> <!--end of body container-->
   </body>
