--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <form id="quiz">
         <div class="row">
           <div class="col-sm-6">
-            <label for="question1">This is a placeholder for where the question will be going?</label>
+            <label for="questionOneAnswer">This is a placeholder for where the question will be going?</label>
               <select class="form-control" id="question1">
                 <option selected disabled>Choose one of the following:</label>
                 <option value="phpAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
@@ -46,7 +46,7 @@
                 <option value="cAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
                 <option value="javaAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
               </select>
-            <label for="question2">This is a placeholder for where the question will be going?</label>
+            <label for="questionTwoAnswer">This is a placeholder for where the question will be going?</label>
               <select class="form-control" id="question2">
                 <option selected disabled>Choose one of the following:</label>
                 <option value="placeholder">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
@@ -55,7 +55,7 @@
                 <option value="cssAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
                 <option value="cAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
               </select>
-            <label for="question3">This is a placeholder for where the question will be going?</label>
+            <label for="questionThreeAnswer">This is a placeholder for where the question will be going?</label>
               <select class="form-control" id="question3">
                 <option selected disabled>Choose one of the following:</label>
                 <option value="javaAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
@@ -66,7 +66,7 @@
               </select>
           </div>
           <div class="col-sm-6">
-            <label for="question4">This is a placeholder for where the question will be going?</label>
+            <label for="questionFourAnswer">This is a placeholder for where the question will be going?</label>
               <select class="form-control" id="question4">
                 <option selected disabled>Choose one of the following:</label>
                 <option value="javaAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
@@ -75,7 +75,7 @@
                 <option value="rubyAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
                 <option value="cssAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
               </select>
-            <label for="question5">This is a placeholder for where the question will be going?</label>
+            <label for="questionFiveAnswer">This is a placeholder for where the question will be going?</label>
               <select class="form-control" id="question5">
                 <option selected disabled>Choose one of the following:</label>
                 <option value="cAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
@@ -84,7 +84,7 @@
                 <option value="javaAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
                 <option value="rubyAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
               </select>
-            <label for="question6">This is a placeholder for where the question will be going?</label>
+            <label for="questionSixAnswer">This is a placeholder for where the question will be going?</label>
               <select class="form-control" id="question6">
                 <option selected disabled>Choose one of the following:</label>
                 <option value="phpAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
