fix bug which originated from inconsistent naming in the index.html, begin work on results branching

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="row">
           <div class="col-sm-6">
             <label for="questionOneAnswer">This is a placeholder for where the question will be going?</label>
-              <select class="form-control" id="question1">
+              <select class="form-control" id="questionOneAnswer">
                 <option selected disabled>Choose one of the following:</label>
                 <option value="phpAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
                 <option value="rubyAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
@@ -47,7 +47,7 @@
                 <option value="javaAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
               </select>
             <label for="questionTwoAnswer">This is a placeholder for where the question will be going?</label>
-              <select class="form-control" id="question2">
+              <select class="form-control" id="questionTwoAnswer">
                 <option selected disabled>Choose one of the following:</label>
                 <option value="placeholder">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
                 <option value="javaAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
@@ -56,7 +56,7 @@
                 <option value="cAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
               </select>
             <label for="questionThreeAnswer">This is a placeholder for where the question will be going?</label>
-              <select class="form-control" id="question3">
+              <select class="form-control" id="questionThreeAnswer">
                 <option selected disabled>Choose one of the following:</label>
                 <option value="javaAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
                 <option value="cssAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
@@ -67,7 +67,7 @@
           </div>
           <div class="col-sm-6">
             <label for="questionFourAnswer">This is a placeholder for where the question will be going?</label>
-              <select class="form-control" id="question4">
+              <select class="form-control" id="questionFourAnswer">
                 <option selected disabled>Choose one of the following:</label>
                 <option value="javaAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
                 <option value="cAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
@@ -76,7 +76,7 @@
                 <option value="cssAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
               </select>
             <label for="questionFiveAnswer">This is a placeholder for where the question will be going?</label>
-              <select class="form-control" id="question5">
+              <select class="form-control" id="questionFiveAnswer">
                 <option selected disabled>Choose one of the following:</label>
                 <option value="cAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
                 <option value="phpAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
@@ -85,7 +85,7 @@
                 <option value="rubyAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
               </select>
             <label for="questionSixAnswer">This is a placeholder for where the question will be going?</label>
-              <select class="form-control" id="question6">
+              <select class="form-control" id="questionSixAnswer">
                 <option selected disabled>Choose one of the following:</label>
                 <option value="phpAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
                 <option value="javaAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
