finalize flow of branching, implementing buttons to add a feature to take the quiz again

--- a/index.html
+++ b/index.html
@@ -99,18 +99,23 @@
       </form>
       <div id="ruby-rails">
         <h3>Sounds like taking Ruby and Rails would be a good choice for you! Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<h3>
+        <button id="reQuiz" type="click" class="btn btn-success btn-lg">Take the quiz again!</button>
       </div>
       <div id="php-drupal">
         <h3>Sounds like taking PHP and Drupal would be a good choice for you! Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<h3>
+        <button id="reQuiz" type="click" class="btn btn-success btn-lg">Take the quiz again!</button>
       </div>
       <div id="java-android">
         <h3>Sounds like taking Java and Android would be a good choice for you! Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<h3>
+        <button id="reQuiz" type="click" class="btn btn-success btn-lg">Take the quiz again!</button>
       </div>
       <div id="css-design">
         <h3>Sounds like taking Ruby and Rails would be a good choice for you! Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<h3>
+        <button id="reQuiz" type="click" class="btn btn-success btn-lg">Take the quiz again!</button>
       </div>
       <div id="c-net">
         <h3>Sounds like taking #C and .NET would be a good choice for you! Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<h3>
+        <button id="reQuiz" type="click" class="btn btn-success btn-lg">Take the quiz again!</button>
       </div>
     </div> <!--end of body container-->
   </body>
