update lorem ipsum in course description sections, some updating of lorem on main section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     </div class="container">
-      <header><h1>Programming Track Helper</h1></header>
+      <header><h1>Programming Branch Helper</h1></header>
       <h3>An interactive guide for your programming education</h3>
       <div class="row">
         <div class="col-sm-6">
@@ -33,7 +33,8 @@
           </ul>
         </div>
       </div> <!--end of row-->
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <h4>Greetings students! As we approach the final weeks of your Intro to Programming class we have come a point at which we must branch, both in javascript and in the direction your education here at Epicodus will take. To help you make your decsion we have made a quiz to help you explore which courses might be the best fit for you.</h4>
+
       <form id="quiz">
         <div class="row">
           <div class="col-sm-6">
@@ -97,26 +98,41 @@
         </div> <!--end row -->
         <button type="submit" class="btn btn-success btn-lg">Submit your answers!</button>
       </form>
+
       <div id="ruby-rails">
-        <h3>Sounds like taking Ruby and Rails would be a good choice for you! Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<h3>
+        <h3>Sounds like taking Ruby and Rails would be a good choice for you!</h3>
+        <p>Ruby builds on the programming fundamentals from Introduction to Programming and gives students more difficult problems to solve, a more advanced set of tools to solve them with, and establishes the foundations for learning the real-world technologies used by programmers on the job.</p>
+        <p>After establishing solid programming fundamentals in Ruby and JavaScript, this course introduces students to the Rails framework used to build interactive web applications.</p>
         <button id="reQuiz" type="click" class="btn btn-success btn-lg">Take the quiz again!</button>
       </div>
       <div id="php-drupal">
-        <h3>Sounds like taking PHP and Drupal would be a good choice for you! Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<h3>
+        <h3>Sounds like taking PHP and Drupal would be a good choice for you!</h3>
+        <p>PHP builds on the programming fundamentals from Introduction to Programming and gives students more difficult problems to solve, a more advanced set of tools to solve them with, and establishes the foundations for learning the real-world technologies used by programmers on the job.</p>
+        <p>After establishing solid programming fundamentals in PHP and JavaScript, this course introduces students to the Drupal framework used by websites like WhiteHouse.gov and Sony.com.</p>
         <button id="reQuiz" type="click" class="btn btn-success btn-lg">Take the quiz again!</button>
       </div>
+
       <div id="java-android">
-        <h3>Sounds like taking Java and Android would be a good choice for you! Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<h3>
+        <h3>Sounds like taking Java and Android would be a good choice for you!</h3>
+        <p>Java builds on the programming fundamentals from Introduction to Programming and gives students more difficult problems to solve, a more advanced set of tools to solve them with, and establishes the foundations for learning the real-world technologies used by programmers on the job.</p>
+        <p>After establishing solid programming fundamentals in Java and JavaScript, this course introduces students to the Android framework used to develop mobile apps.</p>
         <button id="reQuiz" type="click" class="btn btn-success btn-lg">Take the quiz again!</button>
       </div>
+
       <div id="css-design">
-        <h3>Sounds like taking Ruby and Rails would be a good choice for you! Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<h3>
+        <h3>Sounds like taking CSS and Design would be a good choice for you!</h3>
+        <p>The CSS (Cascading Style Sheets) course builds on the fundamentals from Intro to Programming. It teaches students how to style web pages using complex, responsive layouts, all the while exposing them to the latest CSS tools, tricks, and features used every day by front-end developers and designers.</p>
+        <p>After establishing solid programming fundamentals in CSS and JavaScript, this course introduces students to the vast world of Design. At Epicodus we know that tools change, but principles don’t. This course focuses on maintaining a strong balance between theory and practice. Students will not only cultivate a solid foundation of basic design principles, but will also gain experience using modern, industry-standard tools such as Sketch and InVision.</p>
         <button id="reQuiz" type="click" class="btn btn-success btn-lg">Take the quiz again!</button>
       </div>
+
       <div id="c-net">
-        <h3>Sounds like taking #C and .NET would be a good choice for you! Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<h3>
+        <h3>Sounds like taking #C and .NET would be a good choice for you!</h3>
+        <p>#C builds on the programming fundamentals from Introduction to Programming and gives students more difficult problems to solve, a more advanced set of tools to solve them with, and establishes the foundations for learning the real-world technologies used by programmers on the job.</p>
+        <p>After establishing solid programming fundamentals in C# and JavaScript, this course introduces students to the .NET framework used by many large enterprise organizations.</p>
         <button id="reQuiz" type="click" class="btn btn-success btn-lg">Take the quiz again!</button>
       </div>
+
     </div> <!--end of body container-->
   </body>
 </html>
