add some styling to the site, update some more lorem ipsum in quiz section, found a bug where sometimes the button to return to the quiz does not work, initial debug fail

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
       <form id="quiz">
         <div class="row">
           <div class="col-sm-6">
-            <label for="questionOneAnswer">This is a placeholder for where the question will be going?</label>
+            <label for="questionOneAnswer">How excited would you say you are about the visual design aspects of making websites?</label>
               <select class="form-control" id="questionOneAnswer">
                 <option selected disabled>Choose one of the following:</label>
-                <option value="phpAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
-                <option value="rubyAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
-                <option value="cssAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
-                <option value="cAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
-                <option value="javaAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
+                <option value="phpAnswer">It would definitely be pretty neat to do that.</option>
+                <option value="rubyAnswer">I don't know if I'd say I was excited, but I am sure I will do a decent job.</option>
+                <option value="cssAnswer">OMG I AM SO EXCITED!!!!</option>
+                <option value="cAnswer">UGH!</option>
+                <option value="javaAnswer">Visuals are definitely not my strong suit, but I will muddle through.</option>
               </select>
             <label for="questionTwoAnswer">This is a placeholder for where the question will be going?</label>
               <select class="form-control" id="questionTwoAnswer">
@@ -96,41 +96,54 @@
               </select>
           </div>
         </div> <!--end row -->
-        <button type="submit" class="btn btn-success btn-lg">Submit your answers!</button>
+        <div class="centered">
+          <button type="submit" class="btn btn-success btn-lg">Submit your answers!</button>
+        </div>
       </form>
 
       <div id="ruby-rails">
         <h3>Sounds like taking Ruby and Rails would be a good choice for you!</h3>
         <p>Ruby builds on the programming fundamentals from Introduction to Programming and gives students more difficult problems to solve, a more advanced set of tools to solve them with, and establishes the foundations for learning the real-world technologies used by programmers on the job.</p>
         <p>After establishing solid programming fundamentals in Ruby and JavaScript, this course introduces students to the Rails framework used to build interactive web applications.</p>
-        <button id="reQuiz" type="click" class="btn btn-success btn-lg">Take the quiz again!</button>
+        <div class="centered">
+          <button id="reQuiz" type="click" class="btn btn-success btn-lg">Take the quiz again!</button>
+        </div>
       </div>
+
       <div id="php-drupal">
         <h3>Sounds like taking PHP and Drupal would be a good choice for you!</h3>
         <p>PHP builds on the programming fundamentals from Introduction to Programming and gives students more difficult problems to solve, a more advanced set of tools to solve them with, and establishes the foundations for learning the real-world technologies used by programmers on the job.</p>
         <p>After establishing solid programming fundamentals in PHP and JavaScript, this course introduces students to the Drupal framework used by websites like WhiteHouse.gov and Sony.com.</p>
-        <button id="reQuiz" type="click" class="btn btn-success btn-lg">Take the quiz again!</button>
+        <div class="centered">
+          <button id="reQuiz" type="click" class="btn btn-success btn-lg">Take the quiz again!</button>
+        </div>
       </div>
 
       <div id="java-android">
         <h3>Sounds like taking Java and Android would be a good choice for you!</h3>
         <p>Java builds on the programming fundamentals from Introduction to Programming and gives students more difficult problems to solve, a more advanced set of tools to solve them with, and establishes the foundations for learning the real-world technologies used by programmers on the job.</p>
         <p>After establishing solid programming fundamentals in Java and JavaScript, this course introduces students to the Android framework used to develop mobile apps.</p>
-        <button id="reQuiz" type="click" class="btn btn-success btn-lg">Take the quiz again!</button>
+        <div class="centered">
+          <button id="reQuiz" type="click" class="btn btn-success btn-lg">Take the quiz again!</button>
+        </div>
       </div>
 
       <div id="css-design">
         <h3>Sounds like taking CSS and Design would be a good choice for you!</h3>
         <p>The CSS (Cascading Style Sheets) course builds on the fundamentals from Intro to Programming. It teaches students how to style web pages using complex, responsive layouts, all the while exposing them to the latest CSS tools, tricks, and features used every day by front-end developers and designers.</p>
         <p>After establishing solid programming fundamentals in CSS and JavaScript, this course introduces students to the vast world of Design. At Epicodus we know that tools change, but principles don’t. This course focuses on maintaining a strong balance between theory and practice. Students will not only cultivate a solid foundation of basic design principles, but will also gain experience using modern, industry-standard tools such as Sketch and InVision.</p>
-        <button id="reQuiz" type="click" class="btn btn-success btn-lg">Take the quiz again!</button>
+        <div class="centered">
+          <button id="reQuiz" type="click" class="btn btn-success btn-lg">Take the quiz again!</button>
+        </div>
       </div>
 
       <div id="c-net">
         <h3>Sounds like taking #C and .NET would be a good choice for you!</h3>
         <p>#C builds on the programming fundamentals from Introduction to Programming and gives students more difficult problems to solve, a more advanced set of tools to solve them with, and establishes the foundations for learning the real-world technologies used by programmers on the job.</p>
         <p>After establishing solid programming fundamentals in C# and JavaScript, this course introduces students to the .NET framework used by many large enterprise organizations.</p>
-        <button id="reQuiz" type="click" class="btn btn-success btn-lg">Take the quiz again!</button>
+        <div class="centered">
+          <button id="reQuiz" type="click" class="btn btn-success btn-lg">Take the quiz again!</button>
+        </div>
       </div>
 
     </div> <!--end of body container-->
